@@ -5,7 +5,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: file.n,v 1.24.2.16 2010/01/20 13:57:43 dgp Exp $
+'\" RCS: @(#) $Id: file.n,v 1.24.2.17 2010/09/20 12:09:07 dgp Exp $
 '\" 
 .so man.macros
 .TH file n 8.3 Tcl "Tcl Built-In Commands"
@@ -327,7 +327,7 @@ Returns \fB1\fR if file \fIname\fR is readable by the current user,
 \fBfile readlink \fIname\fR
 .
 Returns the value of the symbolic link given by \fIname\fR (i.e. the name
-of the file it points to).  If \fIname\fR is npt a symbolic link or its
+of the file it points to).  If \fIname\fR is not a symbolic link or its
 value cannot be read, then an error is returned.  On systems that do not
 support symbolic links this option is undefined.
 .TP
